--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": "airbnb-base",
+  "extends": "eslint:recommended",
   "env": {
      "es6": true,
      "browser": true,
@@ -24,4 +24,5 @@
       "WithStatement"
     ]
   }
+  
 }
