--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
+    "@eslint-community/eslint-utils": "^4.4.0",
     "@eslint/js": "^9.8.0",
     "@types/jest": "^29.5.12",
     "babel-loader": "^9.1.3",
