--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "index.js",
+  "name": "ajs",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "live-server src",
@@ -13,32 +14,21 @@
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
     "@babel/preset-env": "^7.25.3",
-    "@eslint-community/eslint-utils": "^4.4.0",
-    "@eslint/js": "^9.8.0",
-    "@types/jest": "^29.5.12",
     "babel-loader": "^9.1.3",
     "css-loader": "^7.1.2",
-    "eslint": "^8.57.0",
+    "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^28.6.0",
-    "globals": "^15.9.0",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "live-server": "^1.2.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "webpack-cli": "^5.1.4"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hihussss/dom.git"
-  },
-  "bugs": {
-    "url": "https://github.com/hihussss/dom/issues"
-  },
-  "homepage": "https://github.com/hihussss/dom#readme",
-  "description": ""
+  "dependencies": {
+    "core-js": "^3.37.1"
+  }
 }
