add class boardgame

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,6 +12,9 @@
       "LabeledStatement",
       "WithStatement"
     ]
-  }
+  },
+  "parserOptions": {
+        "sourceType": "module"
+    }
   
 }
