--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,6 +13,9 @@ install:
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
+lint_script:
+  - npm run lint    # команда проверки
+
 build_script:
   - npm run build   # команда сборки
 
