--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server src",
+    "serve": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint ."
   },
@@ -24,9 +25,11 @@
     "html-webpack-plugin": "^5.6.0",
     "jest": "^29.7.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^2.9.1",
     "style-loader": "^4.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.1.0"
   },
   "dependencies": {
     "core-js": "^3.37.1"
