--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -16,5 +16,5 @@ build: off  # отключаем встроенную в appveyor систему
 build_script:
   - npm run build   # команда сборки
 
-lint_script:
+test_script:
   - npm run lint    # команда проверки
