--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -18,3 +18,10 @@ build_script:
 
 test_script:
   - npm run lint    # команда проверки
+
+deploy_script:  # скрипт развёртывания
+  - git config --global credential.helper store
+  - git config --global user.name AppVeyor
+  - git config --global user.email ci@appveyor.com
+  - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
+  - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
