--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,4 +24,4 @@ deploy_script:  # скрипт развёртывания
   - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
-  - npx push-dir --dir=build --branch=gh-pages --force --verbose
+  - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
