--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,7 +21,7 @@ test_script:
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name AppVeyor
+  - git config --global user.name User
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
