--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,6 @@
-environment:
-  nodejs_version: "18"
+image: Ubuntu2204  # образ для сборки
+
+stack: node 20  # окружение
 
 branches:
   only:
@@ -9,19 +10,19 @@ branches:
 cache: node_modules  # кеширование
 
 install:
-  - npm install  # команда установки зависимостей
+  - yarn  # команда установки зависимостей
 
 build: off  # отключаем встроенную в appveyor систему сборки
 
 build_script:
-  - npm run build   # команда сборки
+  - yarn build   # команда сборки
 
 test_script:
-  - npm run lint    # команда проверки
+  - yarn lint && yarn test  # скрипт тестирования
 
 deploy_script:  # скрипт развёртывания
   - git config --global credential.helper store
-  - git config --global user.name User
+  - git config --global user.name AppVeyor
   - git config --global user.email ci@appveyor.com
   - echo "https://$GITHUB_TOKEN:x-oauth-basic@github.com" > "$HOME/.git-credentials"
   - npx gh-pages -d dist -u "appveyor-bot <ci@appveyor>"
